syntax = "proto3";

option csharp_namespace = "Server";

package download;

service Downloader {
  rpc DownloadFile (DownloadFileRequest) returns (stream DownloadFileResponse);
}

message DownloadFileRequest {
  string id = 1;
}

message DownloadFileResponse {
  FileMetadata metadata = 1;
  bytes data = 2;
}

message FileMetadata {
  string file_name = 1;
}
